alignement correct

--- a/style.css
+++ b/style.css
@@ -79,30 +79,25 @@ form button:hover {
     align-items: center;
 }
 
-#project-section {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    align-items: center;
-}
-
 .project {
-    display: flex;
     max-width: 800px;
-    gap: 20px;
     background-color: #333;
     padding: 20px;
     border-radius: 8px;
     color: #fff;
-    align-items: center;
-    /* Assure un alignement vertical entre image et description */
-    text-align: left;
+    text-align: center;
 }
 
-.project h3 {
+.project-title {
     color: #ffb74d;
-    font-size: 1.2em;
-    margin: 0;
+    font-size: 1.4em;
+    margin-bottom: 10px;
+}
+
+.project-content {
+    display: flex;
+    gap: 20px;
+    align-items: center;
 }
 
 .project-image {
@@ -110,21 +105,10 @@ form button:hover {
     height: auto;
     border-radius: 5px;
     flex-shrink: 0;
-    /* Empêche l'image de se redimensionner */
 }
 
-.project p {
+.project-description {
     font-size: 1em;
     color: #ccc;
-    margin-top: 0;
-}
-
-/* Style pour aligner l'image à gauche et description à droite */
-.project.left-align {
-    flex-direction: row;
-}
-
-/* Style pour aligner l'image à droite et description à gauche */
-.project.right-align {
-    flex-direction: row-reverse;
+    text-align: left;
 }
